# Fenwick_Trees

./: .envrc  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  environment.yml
.direnv/: nix-profile-24.11-0sxsfzswhjck7f4s  nix-profile-24.11-0sxsfzswhjck7f4s.rc  nix-profile-25.05-5ds20jm3x2s4z7wn  nix-profile-25.05-5ds20jm3x2s4z7wn.rc  nix-profile-25.05-hpimnbshj9a3j18j.rc  nix-profile-25.05-vdyq3cl640n39scl  nix-profile-25.05-vdyq3cl640n39scl.rc
.github/workflows/: BIT_Publish.yml  create_animation.yml
lib/: BIT
lib/fenwick_tree/: Cargo.toml  fenwick_sandbox.py  fenwick_tree.pyi  pyproject.toml
lib/fenwick_tree/src/: lib.rs
lib/nd_fenwick/: README.md  ndfenwick.py  pyproject.toml
lib/twoDBit/: pyproject.toml  twoDBit.py
manim/2dFenwickTree/: 2dBIT_QU.py  2dBIT_RQ.py  2dBIT_Update.py  2dFenwickTree.py  box_tree.py  manim.cfg  updateShiftExample.py
manim/FenwickTree_Boxes/: FenwickTree_Boxes.py  manim.cfg
manim/FenwickTree_Tree/: FenwickTree_Tree.py  manim.cfg
manim/dynamicArrays/: dynamicArrays.py
manim/dynamicObjectRendering/: dynamic.py  manim.cfg
manim/heaps/: Heap.py  test.py
manim/manim_DSA_test/: manim.cfg  pyproject.toml  shell.nix  simpleFenwick.py  test.py
manim/manim_DSA_test/.direnv/: nix-profile-24.11-0sxsfzswhjck7f4s  nix-profile-24.11-0sxsfzswhjck7f4s.rc
test_viewer/: go.mod  go.sum  main.go  output.json
test_viewer/cmd/: root.go
test_viewer/cmd/utils/: json_reader.go
test_viewer/tui/expanded_elem/: expanded_elem.go
test_viewer/tui/file_picker/: file_picker.go
test_viewer/tui/list_view/: list_view.go
(+128 files in other folders)
