[project]
name = "ndfenwick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "August-Brandt", email = "augustbrandt170@gmail.com" },
    { name = "Slug-Boi", email = "github.unshipped609@slmail.me" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
