[tool.poetry]
name = "manim-ds"
version = "0.1.0"
description = ""
authors = ["Slug-Boi <github.unshipped609@slmail.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
manim-dsa = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
